WIP - W03 Prepare Learning Activities

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../particals/head')%>
+    <%- include('../partials/head')%>
 
     <body>
         <div id="wrapper">
-            <%- include('../particals/header')%>
-            <%- include('../particals/navigation')%>
+            <%- include('../partials/header')%>
+            <%- include('../partials/navigation')%>
 
             <main>
                 <%- body %>
             </main>
 
-            <%- include('../particals/footer')%>
+            <%- include('../partials/footer')%>
         </div>
     </body>
 </html>
